--- a/README
+++ b/README
@@ -4,7 +4,7 @@ EC2 Deployed API:
 Install:
 	git clone https://github.com/DustinBrett/iiaas.git
 	npm install
-	node server.js
+	node server.js (Requires R/W permission to users.json)
 
 Register as a user:
 	curl -X "POST" http://ec2.dustinbrett.com:3000/v1/register --data "email={email address}&password={password}"
