--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-URL: http://ec2.dustinbrett.com:3000/v1/ (ec2-54-187-178-83.us-west-2.compute.amazonaws.com)
+# URL
+
+http://ec2.dustinbrett.com:3000/v1/ (ec2-54-187-178-83.us-west-2.compute.amazonaws.com)
 
 # Installation
 
